--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
 
-<h1>20 movies in trending</h1>
+<h1>Les films du moment</h1>
 
 <mat-card class="example-card" *ngFor="let movie of trendingMovies">
   <mat-card-header>
     <mat-card-title>{{ movie.title }}</mat-card-title>
-    <mat-card-subtitle>{{ movie.release_date }}</mat-card-subtitle>
+    <mat-card-subtitle>Sortie le {{ movie.release_date }}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="Photo of {{ movie.title }}">
   <mat-card-content>
@@ -14,6 +14,9 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="moreDetails(movie.id)">SEE MORE</button>
+    <a mat-button [routerLink]="['/detail/film']" [queryParams]="{id: movie.id}">VOIR PLUS</a>
   </mat-card-actions>
 </mat-card>
+
+<button mat-button *ngIf="currentPage > 1" (click)="previousPage()">Page precedente</button>
+<button mat-button (click)="nextPage()">Page suivante</button>
