add buttons on header

--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -3,9 +3,12 @@
   <mat-toolbar color="primary">
 
     <mat-toolbar-row>
-      <span>Movie App</span>
+      <span class="title" [routerLink]="['/']">Movie App</span>
 
-      <button mat-button></button>
+      <button mat-button>Accueil</button>
+      <button mat-button>Voir tous les films</button>
+      <button mat-button>Voir tous les acteurs</button>
+      <button mat-button>Découvrir un film</button>
 
   </mat-toolbar-row>
 
