--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -2,21 +2,23 @@
 
 <h1>Les films du moment</h1>
 
-<mat-card class="example-card" *ngFor="let movie of trendingMovies">
-  <mat-card-header>
-    <mat-card-title>{{ movie.title }}</mat-card-title>
-    <mat-card-subtitle>Sortie le {{ movie.release_date }}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="Photo of {{ movie.title }}">
-  <mat-card-content>
-    <p>
-      {{ movie.overview }}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <a mat-button [routerLink]="['/detail/film']" [queryParams]="{id: movie.id}">VOIR PLUS</a>
-  </mat-card-actions>
-</mat-card>
+<div id="card-container">
+  <mat-card class="example-card" *ngFor="let movie of trendingMovies">
+    <mat-card-header>
+      <mat-card-title>{{ movie.title }}</mat-card-title>
+      <mat-card-subtitle>Sortie le {{ movie.release_date }}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="Photo of {{ movie.title }}">
+    <mat-card-content>
+      <p>
+        {{ movie.overview }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button [routerLink]="['/detail/film']" [queryParams]="{id: movie.id}">VOIR PLUS</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
 
 <button mat-button *ngIf="currentPage > 1" (click)="previousPage()">Page precedente</button>
 <button mat-button (click)="nextPage()">Page suivante</button>
