--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,3 +1,15 @@
 .example-card {
   max-width: 400px;
+  margin: 10px;
 }
+
+#card-container {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 50px;
+}
+
+h1 {
+  text-align: center;
+}
+
