--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -6,7 +6,7 @@
   <mat-card class="example-card" *ngFor="let movie of trendingMovies">
     <mat-card-header>
       <mat-card-title>{{ movie.title }}</mat-card-title>
-      <mat-card-subtitle>Sortie le {{ movie.release_date }}</mat-card-subtitle>
+      <mat-card-subtitle>Sortie le {{ formatDate(movie.release_date) }}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" alt="Photo of {{ movie.title }}">
     <mat-card-content>
