--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,7 +3,7 @@
 <h1>Les films du moment</h1>
 
 <div id="card-container">
-  <mat-card class="example-card" *ngFor="let movie of trendingMovies">
+  <mat-card class="example-card" *ngFor="let movie of trendingMovies" [routerLink]="['/detail/film']" [queryParams]="{id: movie.id}">
     <mat-card-header>
       <mat-card-title>{{ movie.title }}</mat-card-title>
       <mat-card-subtitle>Sortie le {{ formatDate(movie.release_date) }}</mat-card-subtitle>
@@ -14,13 +14,10 @@
         {{ movie.overview }}
       </p>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button [routerLink]="['/detail/film']" [queryParams]="{id: movie.id}">VOIR PLUS</button>
-    </mat-card-actions>
   </mat-card>
 </div>
 
 <mat-chip-list>
-  <mat-chip *ngIf="currentPage > 1" (click)="previousPage()"> < Précendant</mat-chip>
+  <mat-chip *ngIf="currentPage > 1" (click)="previousPage()"> < Précedant</mat-chip>
   <mat-chip (click)="nextPage()">Suivant ></mat-chip>
 </mat-chip-list>
