--- a/src/app/components/discover/discover.component.html
+++ b/src/app/components/discover/discover.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div *ngIf="!discoverMovies" class="card-container">
-    <mat-card class="example-card" *ngFor="let serie of discoverSeries" [routerLink]="['/detail/film']" [queryParams]="{id: serie.id}">
+    <mat-card class="example-card" *ngFor="let serie of discoverSeries" [routerLink]="['/detail/serie']" [queryParams]="{id: serie.id}">
       <mat-card-header>
         <mat-card-title>{{ serie.title }}</mat-card-title>
         <mat-card-subtitle>Sortie le {{ formatDate(serie.release_date) }}</mat-card-subtitle>
