--- a/src/app/components/discover/discover.component.html
+++ b/src/app/components/discover/discover.component.html
@@ -21,8 +21,8 @@
   <div *ngIf="!discoverMovies" class="card-container">
     <mat-card class="example-card" *ngFor="let serie of discoverSeries" [routerLink]="['/detail/serie']" [queryParams]="{id: serie.id}">
       <mat-card-header>
-        <mat-card-title>{{ serie.title }}</mat-card-title>
-        <mat-card-subtitle>Sortie le {{ formatDate(serie.release_date) }}</mat-card-subtitle>
+        <mat-card-title>{{ serie.name }}</mat-card-title>
+        <mat-card-subtitle>Sortie le {{ formatDate(serie.first_air_date) }}</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="Photo of {{ serie.title }}">
       <mat-card-content>
