--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -5,7 +5,7 @@
     <mat-toolbar-row>
       <span class="title" [routerLink]="['/']">Movie App</span>
 
-      <button mat-button>Accueil</button>
+      <button mat-button [routerLink]="['/']">Accueil</button>
       <button mat-button>Voir tous les films</button>
       <button mat-button>Voir tous les acteurs</button>
       <button mat-button [matMenuTriggerFor]="menu">Découvrir</button>
