--- a/src/app/components/details/detail-movie/detail-movie.component.html
+++ b/src/app/components/details/detail-movie/detail-movie.component.html
@@ -1,9 +1,55 @@
 <app-header></app-header>
 
-<pre>{{ movie | json }}</pre>
+<div id="card-container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title> {{ movie?.title }}</mat-card-title>
+      <mat-card-subtitle>Sortie le {{ formatDate(movie?.release_date) }}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://image.tmdb.org/t/p/original{{ movie?.poster_path }}">
+    <mat-card-content>
+      <mat-chip-list>
+        <mat-chip *ngFor="let genre of movie?.genres">{{ genre.name }}</mat-chip>
+      </mat-chip-list>
+      <p>
+        {{ movie?.overview }}
+      </p>
+      <p>
+        Durée :  {{ transfromRuntime(movie?.runtime) }}
+      </p>
+      <p>
+        Note : {{ movie?.vote_average }} / 10
+      </p>
+      <h2>Casting : </h2>
+      <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtrer">
+        </mat-form-field>
 
-<ul>
-  <li *ngFor="let people of movie?.credits?.cast">
-    <a [routerLink]="['/detail/acteur']" [queryParams]="{id: people.id}">{{ people.name }}</a>
-  </li>
-</ul>
+        <table mat-table [dataSource]="tabDataSource" class="mat-elevation-z8">
+          <!-- Image Column -->
+          <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef> Photo </th>
+            <td mat-cell *matCellDef="let element"><img src="https://image.tmdb.org/t/p/w92{{element.profile_path}}">{{element.poster_path}}</td>
+          </ng-container>
+
+            <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nom </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
+            <!-- Character Column -->
+          <ng-container matColumnDef="character">
+            <th mat-header-cell *matHeaderCellDef> Personnage </th>
+            <td mat-cell *matCellDef="let element"> {{element.character}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr id="row" mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/detail/acteur']" [queryParams]="{id: row.id}"></tr>
+        </table>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<iframe src=""></iframe>
+
